Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-115933

[QtPositioning] geoclue2 backend crashes randomly

XMLWordPrintable

    • Linux/Wayland
    • 21
    • 8fdea76d3 (dev), 00e7e3c89 (6.7), 949b17999 (6.6), 0aad93eda (tqtc/lts-6.5)
    • Foundation Sprint 104, Foundation Sprint 105

      The geoclue2 backend might segfault randomly. The original bug was observed on Wayland, but that's probably not related.

      Before the crash, a following error message is displayed:

      qt.positioning.geoclue2: Unable to obtain the client patch: "org.freedesktop.DBus.Error.NoReply Did not receive a reply. Possible causes include: the remote application did not send a reply, the message bus security policy blocked the reply, the reply timeout expired, or the network connection was broken."
      

      The stacktrace looks like this:

      std::__atomic_base::load atomic_base.h:837
      std::atomic::load atomic:577
      A::QAtomicOps::loadAcquire<…> qatomic_cxx11.h:214
      A::QBasicAtomicPointer::loadAcquire qbasicatomic.h:177
      A::QCoreApplicationPrivate::lockThreadPostEventList qcoreapplication.cpp:1591
      A::QCoreApplication::postEvent qcoreapplication.cpp:1646
      A::QObject::deleteLater qobject.cpp:2401
      A::QScopedPointerObjectDeleteLater::cleanup qscopedpointer.h:61
      A::QScopedPointer::~QScopedPointer qscopedpointer.h:81
      operator() qgeopositioninfosource_geoclue2.cpp:251
      A::QtPrivate::FunctorCall::call(struct {...} &, void **) qobjectdefs_impl.h:137
      A::QtPrivate::Functor::call<…>(struct {...} &, void *, void **) qobjectdefs_impl.h:339
      A::QtPrivate::QCallableObject::impl(int, A::QtPrivate::QSlotObjectBase *, A::QObject *, void **, bool *) qobjectdefs_impl.h:487
      A::QtPrivate::QSlotObjectBase::call qobjectdefs_impl.h:433
      A::doActivate<…> qobject.cpp:4017
      A::QMetaObject::activate qobject.cpp:4077
      A::QDBusPendingCallWatcher::finished moc_qdbuspendingcall.cpp:169
      A::QDBusPendingCallWatcherPrivate::_q_finished qdbuspendingcall.cpp:460
      A::QDBusPendingCallWatcher::qt_static_metacall moc_qdbuspendingcall.cpp:107
      A::QMetaCallEvent::placeMetaCall qobject.cpp:652
      A::QObject::event qobject.cpp:1438
      A::QCoreApplicationPrivate::notify_helper qcoreapplication.cpp:1290
      A::doNotify qcoreapplication.cpp:1219
      A::QCoreApplication::notify qcoreapplication.cpp:1202
      A::QGuiApplication::notify qguiapplication.cpp:1977
      A::QCoreApplication::notifyInternal2 qcoreapplication.cpp:1123
      A::QCoreApplication::sendEvent qcoreapplication.cpp:1557
      A::QCoreApplicationPrivate::sendPostedEvents qcoreapplication.cpp:1924
      A::QCoreApplication::sendPostedEvents qcoreapplication.cpp:1781
      A::postEventSourceDispatch qeventdispatcher_glib.cpp:240
      g_main_context_dispatch 0x00007ffff410fa31
      <unknown> 0x00007ffff416ccc9
      g_main_context_iteration 0x00007ffff410d0e2
      A::QEventDispatcherGlib::processEvents qeventdispatcher_glib.cpp:390
      A::QPAEventDispatcherGlib::processEvents qeventdispatcher_glib.cpp:87
      A::QEventLoop::processEvents qeventloop.cpp:100
      A::QEventLoop::exec qeventloop.cpp:182
      A::QCoreApplication::exec qcoreapplication.cpp:1460
      A::QGuiApplication::exec qguiapplication.cpp:1909
      main main.cpp:43
      <unknown> 0x00007ffff3e27cd0
      __libc_start_main 0x00007ffff3e27d8a
      _start 0x000055555555f895
      

      The bug is originally reported by dennisoberst

        For Gerrit Dashboard: QTBUG-115933
        # Subject Branch Project Status CR V

            ivan.solovev Ivan Solovev
            ivan.solovev Ivan Solovev
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes