src/plugins/position/geoclue2/qgeopositioninfosource_geoclue2.cpp
@@ -216,13 +216,12 @@ void QGeoPositionInfoSourceGeoclue2::createClient()
     const auto watcher = new QDBusPendingCallWatcher(reply, this);
     connect(watcher, &QDBusPendingCallWatcher::finished,
             [this](QDBusPendingCallWatcher *watcher) {
-        const QScopedPointer<QDBusPendingCallWatcher, QScopedPointerDeleteLater>
-                scopedWatcher(watcher);
-        const QDBusPendingReply<QDBusObjectPath> reply = *scopedWatcher;
+        watcher->deleteLater();
+        const QDBusPendingReply<QDBusObjectPath> reply = *watcher;
         if (reply.isError()) {
             const auto error = reply.error();
-            qCWarning(lcPositioningGeoclue2) << "Unable to obtain the client patch:"
-                                             << error.name() + error.message();
+            qCWarning(lcPositioningGeoclue2) << "Unable to obtain the client:"
+                                             << error.name() << error.message();
             setError(AccessError);
         } else {
             const QString clientPath = reply.value().path();
@@ -238,8 +237,8 @@ void QGeoPositionInfoSourceGeoclue2::createClient()
                 const auto error = m_client->lastError();
                 qCCritical(lcPositioningGeoclue2) << "Unable to create the client object:"
                                                   << error.name() << error.message();
-                setError(AccessError);
                 delete m_client;
+                setError(AccessError);
             } else {
                 connect(m_client.data(), &OrgFreedesktopGeoClue2ClientInterface::LocationUpdated,
                         this, &QGeoPositionInfoSourceGeoclue2::handleNewLocation);
